# python-repetita-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/demand-visualization/: demand_visualization.py  requirements.txt
src/repetita_parser/: __about__.py  demands.py  errors.py  instance.py  topology.py  types.py  utils.py
tests/: __init__.py  paths.py  test_comments.py  test_demands.py  test_errors.py  test_instance.py  test_topology.py
tests/data/bad/: bad_edge_memo.graph  bad_memo.demands  bad_node_fields.graph
tests/data/comments/: demands_comment_in_header.demands  demands_comment_in_memo.demands  demands_comments_end.demands  demands_comments_interspersed.demands  demands_comments_start.demands  demands_no_comments.demands  demands_whitespace_comments.demands  topology_comment_in_header.graph  topology_comment_in_memo.graph  topology_comments_end.graph  topology_comments_interspersed.graph  topology_comments_middle.graph  topology_comments_start.graph  topology_empty_comments.graph  topology_no_comments.graph  topology_whitespace_comments.graph
tests/data/export/: .gitignore
tests/data/parsing/bad/: bad_edge_fields.graph  bad_edge_header.graph  bad_fields.demands  bad_header.demands  bad_node_header.graph  bad_node_memo.graph
tests/data/validation/bad/: both_bad.demands  dest_bad.demands  src_bad.demands
