[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repetita-parser"
version = "2.0.0"
description = "A parser for the REPETITA format"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
  { name="Leon Richardt", email="pip@leon.dev" },
]
dependencies = ["numpy"]

[project.optional-dependencies]
networkx = ["networkx"]

[project.urls]
Documentation = "https://github.com/leon-richardt/python-repetita-parser#readme"
Issues = "https://github.com/leon-richardt/python-repetita-parser/issues"
Source = "https://github.com/leon-richardt/python-repetita-parser"

[tool.hatch.build]
exclude = [
    "examples"
]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
features = ["networkx"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
  "coverage html"
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
  "numpy",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/repetita_parser}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

# Not type annotations available for networkx
[[tool.mypy.overrides]]
module = "networkx"
ignore_missing_imports = true

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.pyright]
line-length = 120

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["repetita_parser"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["repetita_parser"]
branch = true
parallel = true
omit = [
  "src/repetita_parser/__about__.py",
]

[tool.coverage.paths]
repetita_parser = ["src/repetita_parser", "*/repetita-parser/src/repetita_parser"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["tests"]
